# remind_birthdays

./: AUTHORS  COPYING  INSTALL  Makefile.in  README  configure  configure.ac
man/: Makefile.am  Makefile.in  remind_birthdays.1
src/: Makefile.am  Makefile.in  remind_birthdays.h  remind_birthdays.m
